Добавлена кнопка старта отсчета времени

--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -1,4 +1,12 @@
 .main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  &__wrapper {
     display: inline-block;
     position: relative;
+    margin-bottom: 5px;
   }
+}
